# ExcursionBot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml
exbot/: __init__.py  config.py  dispatcher.py  main.py  pyproject.toml  run.py  text.py
exbot/api/: main.py
exbot/api/auth/: __init__.py  jwt_handler.py
exbot/api/internal/: admin.py
exbot/api/routers/: __init__.py  admin.py  auth.py  excursions.py  questions.py  users.py
exbot/content/: about.py  excursions_list.py  greet.py  help.py  main_text.py  questions.py
exbot/content/colomna/: questions.py
exbot/content/jorney/: questions.py
exbot/database/: __init__.py  base.py  mixins.py  models.py  schemas.py  services.py
exbot/database/crud/: __init__.py  admins.py  excursions.py  questions.py  users.py
exbot/database/models/: __init__.py  admin.py  excursion.py  question.py  user.py
exbot/database/schemas/: __init__.py  admin.py  excursion.py  question.py  user.py
exbot/db/: __init__.py  _db.py  db_test.py  db_utils.py  engine.py  quick_commands.py  user.py
exbot/handlers/: __init__.py  about.py  commands_list.py  excursion.py  help.py  inline_menu.py  payment.py  register.py  start.py
exbot/handlers/excursions/: __init__.py  excursion.py  guide_list.py  state_excursion.py
exbot/keyboards/: __init__.py  keyboards.py
exbot/keyboards/inline/: __init__.py  help.py  ikb.py  inline_keyboard.py  menu.py
exbot/keyboards/keyboard/: keyboards.py
exbot/migrations/: __init__.py  env.py
exbot/poetry/: poetry_config.toml  pyproject.toml
exbot/state/: __init__.py  excursion.py  register.py
exbot/utils/: data.py  notify_admins.py  set_bot_commands.py  set_default_commands.py  tools.py
(+1 files in other folders)
